# esp32_iaq_portal

./: CMakeLists.txt  README.md  sdkconfig.old
components/app_cfg/: CMakeLists.txt  Kconfig  app_cfg.c
components/app_cfg/include/: app_cfg.h
components/bme68x/: CMakeLists.txt
components/bsec2/: CMakeLists.txt  bsec_config.c  bsec_port.c
components/bsec2/include/: bsec_port.h
components/sensor_iaq/: CMakeLists.txt  sensor_iaq.c  sensor_iaq.h
components/utils/: CMakeLists.txt  utils.c
components/utils/include/: utils.h
components/wifi_setup/: CMakeLists.txt  wifi_setup.c
components/wifi_setup/include/: wifi_setup.h
main/: CMakeLists.txt  main.c
